<resources>
    <string name="app_name">Gym Weight Tracker</string>

    <!-- Main Fragment -->
    <string name="tab_title_scan">Scan</string>
    <string name="tab_title_devices">Devices</string>
    <string name="nfc_status_enabledy">Scan NFC tag</string>
    <string name="nfc_status_disabled">NFC is disabled</string>
    <string name="nfc_invalid_payload">Unable to read tag</string>

    <!-- List Fragment -->
    <string name="text_friendlyname_hint">Friendly name</string>
    <string name="text_sets">Sets</string>
    <string name="text_repetitions">Repetitions</string>
    <string name="text_weight">Weight</string>
    <string name="button_close">Close</string>
    <string name="button_delete">Delete</string>

</resources>
